- 18/07/12   * sources updated to Generator 0.36 (2007.02.26)   * almost all *.irx from ps2sdk   * poweroff.irx replaced with ps2sdk cause old was buggy   * added ps2-packer support   * more flexible option for music support. Now you can free     up your /data folder for reducing final ELF size. At least     one *.mod file must be present   * now mod files zipped without comression for better ps2-packer work

--- a/cpu68k/Makefile
+++ b/cpu68k/Makefile
@@ -62,35 +62,35 @@ def68k-funcs.h:	def68k def68k.def
 def68k-proto.h:	def68k def68k.def
 	./def68k
 
-cpu68k-0.c:	gen68k
-	./gen68k
-cpu68k-1.c:	gen68k
-	./gen68k
-cpu68k-2.c:	gen68k
-	./gen68k
-cpu68k-3.c:	gen68k
-	./gen68k
-cpu68k-4.c:	gen68k
-	./gen68k
-cpu68k-5.c:	gen68k
-	./gen68k
-cpu68k-6.c:	gen68k
-	./gen68k
-cpu68k-7.c:	gen68k
-	./gen68k
-cpu68k-8.c:	gen68k
-	./gen68k
-cpu68k-9.c:	gen68k
-	./gen68k
-cpu68k-a.c:	gen68k
-	./gen68k
-cpu68k-b.c:	gen68k
-	./gen68k
-cpu68k-c.c:	gen68k
-	./gen68k
-cpu68k-d.c:	gen68k
-	./gen68k
-cpu68k-e.c:	gen68k
-	./gen68k
-cpu68k-f.c:	gen68k
-	./gen68k
+cpu68k-0.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-1.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-2.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-3.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-4.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-5.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-6.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-7.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-8.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-9.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-a.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-b.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-c.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-d.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-e.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
+cpu68k-f.c:	gen68k$(EXEEXT)
+	./gen68k$(EXEEXT)
