--- a/static-data/Makefile
+++ b/static-data/Makefile
@@ -14,14 +14,14 @@ OBJECTS	=	ocra-fnt.o zerohour-fnt.o pgenbg.o folder.o sonic.o \
 		ps2atadIrx.o ps2dev9Irx.o sjpcmIrx.o musicZip.o usbdIrx.o usb_massIrx.o freesdIrx.o freesio2Irx.o \
 		freepadIrx.o xmcmanIrx.o xmcservIrx.o freemtapIrx.o
 
-ZIPFILES = Paesaggi.mod spaceman_-_loadertune.mod teis_-_chiller.mod anette.mod spaceman_-_clean.mod spaceman_-_worldmap.mod
+ZIPFILES = *.mod
 ZIPSOURCES = $(addprefix ../data/,$(ZIPFILES))
 
 all: $(OBJECTS)
 	cp -f $(OBJECTS) ../build/
 
 clean:
-	$(RM) *.o *.map *.lst core *.dis *.elf *.zip
+	$(RM) *.o *.map *.lst core *.dis music.zip
 
 %Irx.s: %.irx
 	bin2s $< $@ $(*)Irx
@@ -35,12 +35,12 @@ clean:
 %.s: %.icn
 	bin2s $< $@ $(*)Icn
 
-#%.irx: $(PS2SDK)/iop/irx/%.irx
-#	cp $< $@
+%.irx: $(PS2SDK)/iop/irx/%.irx
+	cp $< $@
 
 %Zip.s: %.zip
 	bin2s $< $@ $(*)Zip
 
 music.zip: $(ZIPSOURCES)
-	cd ../data && zip -9 ../static-data/$@ $(ZIPFILES)
+	cd ../data && zip -0 ../static-data/$@ $(ZIPFILES)
 
