* zlib modules updated to 1.2.3 (taken from ps2sdk)     Now memory card saving works fine (at least for me) :)   * Change background picture (thanks to retro)   * generator.c updated into last from cbiere   * render.c updated into last from dGen - 12/08/12

--- a/zlib/Makefile
+++ b/zlib/Makefile
@@ -7,8 +7,8 @@
 
 include ../Makefile.include
 
-OBJECTS		=	adler32.o compress.o crc32.o deflate.o gzio.o infblock.o infcodes.o inffast.o \
-			inflate.o inftrees.o infutil.o uncompr.o zutil.o trees.o
+OBJECTS		=	adler32.o crc32.o deflate.o infback.o inffast.o inflate.o inftrees.o \
+			trees.o zutil.o compress.o uncompr.o gzio.o
 
 all: $(OBJECTS)
 	cp -f $(OBJECTS) ../build/
