USB drivers rewrited

--- a/iop/Makefile
+++ b/iop/Makefile
@@ -6,7 +6,9 @@
 all:
 	$(MAKE) -C sjpcm
 	$(MAKE) -C cdvd
+	$(MAKE) -C usbhdfsd
 
 clean:
 	$(MAKE) -C sjpcm clean
 	$(MAKE) -C cdvd clean
+	$(MAKE) -C usbhdfsd clean
